# oop_fulfillment_eda

./: .gitignore  README.md  pyproject.toml
datasets/: orders_october.csv
src/: main.py
src/data_generator/: __init__.py  data_generator.py
src/eda_modules/: __init__.py
