[tool.poetry]
name = "easy-eda"
version = "0.1.0"
description = ""
authors = ["Fefe Alves <monitore.falves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
faker = "^30.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
